<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UiL  v1.0.0</string>
    <string name="app_description">UiL bandy app som holder oversikt over treninger, kamper og cuper, pluss spillere, trenere og lagledere</string>
    <string name="app_about">Bandy activities calendar v1.0.0\n.\nDeveloper gunnarro</string>
    <string name="na">na</string>
    <string name="blank"></string>
    <string name="spinner_view_by">View by</string>
    <string name="spinner_activity_filter">Activity filter</string>
    <string name="activities_period">Activities period</string>
    <string name="spinner_teams">Teams</string>
    <string name="statistic">Statistic</string>
    <string name="value_0">0</string>
    <string name="label_name">Name</string>
    <string name="label_played">P</string>
    <string name="label_won">W</string>
    <string name="label_draw">D</string>
    <string name="label_loss">L</string>
    <string name="label_goals">Goal</string>
    <string name="label_league">League</string>
    <string name="label_training">Training</string>
    <string name="label_cup">Cup</string>
    <string name="label_total">Total</string>
    <string name="tab_team">Team</string>
    <string name="tab_player">Player</string>
    <string name="jersey_number">Jersey</string>
	<string name="role">Role</string>

    <string-array name="date_peroid_options">
        <item>All</item>
        <item>Year</item>
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
    </string-array>
    <string-array name="activitiy_season_options">
        <item>2013/2014</item>
        <item>2014/2015</item>
        <item>2015/2016</item>
    </string-array>
    <string-array name="club_options">
        <item>Ullevål Bandy IL</item>
    </string-array>
    <string-array name="team_options">
        <item>%2003</item>
        <item>%2004</item>
        <item>%2005</item>
    </string-array>
    <string-array name="activitiy_type_options">
        <item>Cup</item>
        <item>Match</item>
        <item>Training</item>
    </string-array>
    <string-array name="venue_options">
        <item>Bergbanen</item>
        <item>NIH</item>
    </string-array>
    <string-array name="activitiy_filter_options">
        <item>All</item>
        <item>Cup</item>
        <item>Match</item>
        <item>Training</item>
    </string-array>
    <string-array name="players_options">
        <item>None</item>
    </string-array>
    
    <string-array name="home_team_options"></string-array>
    <string-array name="away_team_options"></string-array>
    <string-array name="referee_options"></string-array>
    <string-array name="match_type_options"></string-array>
    <string-array name="player_status_options"></string-array>

    <string name="statestics">Statestics</string>
    <string name="team">Team</string>
    <string name="league">League</string>
    <string name="trainings">Trainings</string>
    <string name="matches">Matches</string>
    <string name="email">Email</string>
    <string name="cups">Cups</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="street_name">Street name</string>
    <string name="street_number">Street number</string>
    <string name="street_number_postfix">Street number postfix</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="birth">Birth</string>
    <string name="gender">Gender</string>
    <string name="yearOfBirth">Year of birth</string>
    <string name="school">School</string>
    <string name="status">Status</string>
    <string name="parents">Parents</string>
    <string name="coach">Coach</string>
    <string name="players">Players</string>
    <string name="personalia">Personalia</string>
    <string name="teams">Teams</string>
    <string name="contacts">Contacts</string>
    <string name="cup">Cup</string>
    <string name="tournaments">Tournaments</string>
    <string name="match">Match</string>
    <string name="training">Training</string>
    <string name="referees">Referees</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="search_info">Search info</string>
    <string name="address">Address</string>
    <string name="team_lead">Teamlead</string>
    <string name="menu_back">Back</string>
    <string name="menu_home">Home</string>
    <string name="clubs">Clubs</string>
    <string name="tab_search">Search</string>

    <!-- Club -->
    <string name="department">Department</string>
    <string name="homepage">HomePage</string>
    <!-- Team -->
    <!-- Player -->
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>

    <!-- Menu Strings -->
    <string name="menu_quit">Quit</string>
    <string name="menu_about">About</string>

</resources>