<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <item
        android:id="@+id/menuitem_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_help">
    </item>
    -->
    <item
        android:id="@+id/menu_item_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/menu_about">
    </item>
    <item
        android:id="@+id/menu_item_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_quit">
    </item>
    <item
        android:id="@+id/menu_item_back"
        android:icon="@android:drawable/ic_media_previous"
        android:title="@string/menu_back">
    </item>
    <item
        android:id="@+id/menuitem_home"
        android:icon="@android:drawable/ic_media_previous"
        android:showAsAction="ifRoom"
        android:title="@string/menu_home">
    </item>

</menu>