<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/personaliaHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/personalia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <View
        android:id="@+id/personaliaSeparator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/personaliaHeader"
        android:layout_marginBottom="3dp"
        android:background="@drawable/line_separator" />

    <TableLayout
        android:id="@+id/personaliaTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personaliaSeparator"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:baselineAligned="false"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:textAppearance="?android:attr/textAppearanceMedium" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/contactFirstNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:text="@string/blank" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_name" />

            <EditText
                android:id="@+id/contactMiddleNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="textPersonName"
                android:text="@string/blank" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/contactLastNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="textPersonName"
                android:text="@string/blank" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <RadioButton
                android:id="@+id/maleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Role" />

            <Spinner
                android:id="@+id/contactRoleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street_name" />

            <EditText
                android:id="@+id/contactStreetNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="text"
                android:text="@string/blank" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street_number" />

            <EditText
                android:id="@+id/contactStreetNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="number"
                android:text="@string/blank" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street_number_postfix" />

            <EditText
                android:id="@+id/contactStreetNumberPostfixTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="1"
                android:gravity="left"
                android:inputType="number"
                android:text="@string/blank" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_code" />

            <EditText
                android:id="@+id/contactPostalCodeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:gravity="left"
                android:inputType="number"
                android:text="@string/blank" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/contactCityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="text"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <EditText
                android:id="@+id/contactCountryTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="text"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <EditText
                android:id="@+id/contactMobileNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="phone"
                android:text="@string/blank"
                android:textSize="12sp" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/contactEmailAddressTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="textEmailAddress"
                android:text="@string/blank" />
        </TableRow>
    </TableLayout>

</RelativeLayout>